--- a/ansible.yaml
+++ b/ansible.yaml
@@ -1,5 +1,5 @@
 - hosts: node
-  become: yes
+  become: true
   tasks:
     - name: create new deployment
       command: kubectl apply -f /home/azureuser/Deployment.yml
