--- a/ansible.yaml
+++ b/ansible.yaml
@@ -2,6 +2,6 @@
   become: true
   tasks:
     - name: create new deployment
-      command: kubectl apply -f /home/azureuser/Deployment.yml
+      command: kubectl apply -f /home/azureuser/Deployment.yaml
     - name: create new service
-      command: kubectl apply -f /home/azureuser/Service.yml
+      command: kubectl apply -f /home/azureuser/Service.yaml
